# svelte-wasm

./: Cargo.toml  README.md  flake.nix  justfile  package-lock.json  package.json  shell.nix  tailwind.config.ts
encoder/: Cargo.toml
encoder/src/: lib.rs
src/routes/: +page.svelte
