[workspace]
members = ["encoder"]

[workspace.package]
version = "0.1.0"
publish = false
edition = "2021"
authors = ["https://github.com/JADSN1894"]
license = "MIT"


[profile.dev]
opt-level = 0
lto = false
debug = true
debug-assertions = true

[profile.release]
opt-level = 3
lto = true
debug = false
debug-assertions = false
strip = true

[profile.bench]
opt-level = 3
lto = true
debug = false
debug-assertions = false

[profile.test]
opt-level = 0
lto = false
debug = true
debug-assertions = true

[workspace.dependencies]
anyhow = { version = "=1.0.72" }
bip0039 = "=0.11.0"
console_error_panic_hook = { version = "=0.1.7" }
cfg-if = { version = "=1.0.0" }
getrandom = { version = "=0.2.10", features = ["js"] }
serde = { version = "=1.0.171", features = ["derive"] }
serde_json = "=1.0.103"
serde-wasm-bindgen = "=0.5.0"
tsify = { version = "=0.4.5" }
md-5 = "=0.10.5"
sha-1 = "=0.10.1"
sha2 = "=0.10.7"
wasm-bindgen = "=0.2.87"
wee_alloc = { version = "=0.4.5" }
